skiplang/compiler/invalid_tests/visibility/dotted_private_class.sk
module M;

private class .Foo()

module end;

fun main(): void {
  print_raw("Fail")
}
